use nio instead of io in tests.