@@ -3,25 +3,23 @@ package maude.behaviortransformer;
 import java.io.File;
 import java.io.IOException;
 import java.nio.charset.Charset;
-import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import org.apache.commons.io.FileUtils;
+import util.FileTestHelper;
 
 public interface MaudeTestHelper {
 
   default String readExpectedMaudeModule(String folder, String resourceFileName)
       throws IOException {
-    File maudeModel = getMaudeModuleFile(folder, resourceFileName);
-    return FileUtils.readFileToString(maudeModel, StandardCharsets.UTF_8)
-        .replaceAll("\r?\n", "\r\n");
+    Path maudeModel = getMaudeModuleFile(folder, resourceFileName);
+    return Files.readString(maudeModel).replaceAll("\r?\n", "\r\n");
     // force identical line separators;
   }
 
-  private File getMaudeModuleFile(String folder, String resourceFileName) {
+  private Path getMaudeModuleFile(String folder, String resourceFileName) {
     String resourcePath = folder + resourceFileName + ".maude";
-
-    @SuppressWarnings("ConstantConditions")
-    File maudeModel = new File(this.getClass().getResource(resourcePath).getFile());
-    return maudeModel;
+    return FileTestHelper.getResource(resourcePath);
   }
 
   default void replaceWithActualIfNeeded(
